# first_crewai_project

./: README.md  pyproject.toml  report.md
src/first_project/: crew.py  main.py
